# CoALP

./: .gitignore  CoALP.cabal  CoALP.cabal~  README.md  Setup.hs  fib.logic  simple.logic
benchmarks/: Automata.hs  Fibs.hs
examples/guarded/: natstream.logic
examples/paper/: P1.logic  P10.logic  P11.logic  P2.logic  P3.logic  P5.logic  P7.logic  bad.logic
examples/unguarded/: unguarded01.logic
inter/: Main.hs  Main.hs~
inter/CoALPj/: Actions.hs  Actions.hs~  CmdOpts.hs  InternalState.hs  REPL.hs  REPL.hs~
inter/CoALPj/REPL/: Commands.hs  Commands.hs~  Parser.hs
interpreter/: CoALPi.hs
interpreter/CoALP/Interpreter/: Options.hs
lib/CoALP/: Guards.hs  Subst.hs
lib/CoALP/UI/: Parser.hs
programs/: dd.logic  dis_test.logic  fib.logic  luca_meth.logic  question28.logic  question30.logic  tom.logic  tom_real.logic  tom_realonly.logic
programs/fupeng/: dddnats.logic  ddnats.logic  dnats.logic  loop.logic  nats.logic
programs/guarded/: automaton.logic  family.logic  guarded4.logic  streamnat.logic
programs/kiyung/: equirecbad.logic  hm.logic  kinded.logic  stlc.logic  transitive.logic  unifysets.logic
programs/paper/: p02.logic  p03.logic  p05.logic  p06.logic  p09.logic  p10.logic
programs/typeinference/: typeinfEQ.logic~
ref-int/: Main.hs
ref-int/CoALPj/: CmdOpts.hs  InternalState.hs  REPL.hs
ref-int/CoALPj/REPL/: Commands.hs  Parser.hs
src/: CoALP.hs  CoALP.hs~  Test.hs~
src/CoALP/: AltGuards.hs  AntiUnify.hs  DerTree.hs  Error.hs  FreshVar.hs  Guards.hs  Guards2.hs  Program.hs  Program.hs~  Reductions.hs  Render.hs  RewTree.hs  Sound.hs  Transform.hs  Transform.hs~  Unify.hs
src/CoALP/Parser/: Lexer.x  Parser.y  PrettyPrint.hs
src/CoALPj/: REPL.hs
tests/: Tests.hs  eqTest.translogic~
tests/CoALP/Tests/Golden/: eq-transformed.logic  eq.logic
tests/CoALP/Tests/Golden/Annotate/: simpleLoop.golden  simpleLoop.logic  unguarded1.golden  unguarded10.golden  unguarded11.golden  unguarded12.golden  unguarded13.golden  unguarded14.golden  unguarded15.golden  unguarded16.golden  unguarded17.golden  unguarded17.logic  unguarded19.golden  unguarded2.golden  unguarded20.golden  unguarded21.golden  unguarded22.golden  unguarded23.golden  unguarded24.golden  unguarded25.golden  unguarded27.golden  unguarded3.golden  unguarded4.golden  unguarded5.golden  unguarded7.golden  unguarded8.golden  unguarded9.golden
tests/CoALP/Tests/Golden/Transform/: btree.golden  eq.golden
tests/CoALP/Tests/Unit/: AntiUnify.hs  Transform.hs  Transform.hs~  Unify.hs
