name:          CoALP
--             ,------- release
--             | ,----- pre-release
--             | | ,--- fixes and new functionality
--             | | |
version:       0.0.3
license:       LGPL-3
author:        Vladimir Komendantskiy <komendantsky@gmail.com>,
               Jónathan Heras <joheras@gmail.com>,
               František Farka <ffarka@gmail.com>

maintainer:    Vladimir Komendantskiy <komendantsky@gmail.com>
category:      CoALP
synopsis:      Coalgebraic logic programming library
stability:     experimental
build-type:    Custom
cabal-version: >= 1.16

source-repository head
  type:     git
  location: https://github.com/frantisekfarka/CoALP.git
  branch:   master

-- Event logs conflict with profiling. Hence a special flag to turn event logs
-- on and to turn profiling off.
flag eventlog
  description: Allows to generate event logs for ThreadScope.
  default:     False


library
  hs-source-dirs:   src 
  --, lib

  default-language: Haskell2010

  exposed-modules:  CoALP
                    CoALP.Error
                    CoALP.Program
                    CoALP.Parser.Lexer
                    CoALP.Parser.Parser
                    CoALP.Parser.PrettyPrint
                    CoALP.Render
                    CoALP.RewTree
                    CoALP.DerTree
                    CoALP.Guards2
                    CoALP.Unify
--                    CoALP.UI

  other-modules:    CoALP.FreshVar
                    CoALP.Reductions
  --other-modules:    CoALP.Tree
  --                  CoALP.Subst
  --                  CoALP.Clause
  --                  CoALP.Term
  --                  CoALP.Mode
  --                  CoALP.Guards
  --                  CoALP.UI.Dot
  --                  CoALP.UI.Parser
  --                  CoALP.UI.Printer
   --                 CoALP.FreshVar

  if flag(eventlog)
    ghc-options:    -Wall -rtsopts -eventlog
  else
    ghc-options:    -Wall -rtsopts -auto-all -caf-all

  build-depends:    base                 >= 4.6,
                    containers           >= 0.5,
                    mtl                  >= 2.1,
                    directory,
                    hashable,
                    deepseq,
                    text                 >= 1.2,
                    parsec               >= 3.1,
                    process              >= 1.0,
                    transformers         >= 0.3,
                    unordered-containers >= 0.2.3,
                    -- my dependencies
                    array                >= 0.5

  build-tools:      alex, happy

--executable CoALPi
--  hs-source-dirs:   interpreter

--  main-is:          CoALPi.hs

--  other-modules:    CoALP.Interpreter.Options

--  default-language: Haskell2010

--  if flag(eventlog)
--    ghc-options:    -O2 -Wall -rtsopts -threaded -eventlog
--  else
--    ghc-options:    -O2 -Wall -rtsopts -threaded -auto-all -caf-all

--  build-depends:    base                 >= 4.6,
--                    CoALP                >= 0.0.1,
--                    containers           >= 0.5,
--                    mtl                  >= 2.1,
--                    old-locale,
--                    time                 >= 1.4,
--                    transformers         >= 0.3,
--                    parsec               >= 3.1,
--                    deepseq,
--                    process              >= 1.1,
--                    unordered-containers >= 0.2.3,
--                    optparse-applicative >= 0.7 

--  default-extensions: BangPatterns

executable CoALPj
  hs-source-dirs:   ref-int
  main-is:          Main.hs
  other-modules:    CoALPj.CmdOpts

  other-extensions: FlexibleInstances
  ghc-options:      -Wall -fwarn-incomplete-patterns 


  default-language: Haskell2010

  build-depends:    base                 >= 4.7,
                    CoALP                >= 0.0.1,
                    transformers         >= 0.3,
                    optparse-applicative >= 0.11,
                    text                 >= 1.2,
                    ansi-wl-pprint       >= 0.6.7,
                    mtl                  >= 2.2.1,
                    haskeline            >= 0.7.2,
                    parsec               >= 3.1.7

--executable CoALP-benchmark-fibs
--  hs-source-dirs:   benchmarks

--  main-is:          Fibs.hs

--  default-language: Haskell2010

--  if flag(eventlog)
--    ghc-options:    -O2 -Wall -rtsopts -threaded -eventlog
--  else
--    ghc-options:    -O2 -Wall -rtsopts -threaded -auto-all -caf-all

--  build-depends:    base     >= 4.6,
--                    CoALP    >= 0.0.1,
--                    containers >= 0.5,
--                    deepseq  >= 1.3,
--                    time     >= 1.4,
--                    unordered-containers >= 0.2.3

--  default-extensions: BangPatterns


--executable CoALP-benchmark-automata
--  hs-source-dirs:   benchmarks

--  main-is:          Automata.hs

--  default-language: Haskell2010

--  if flag(eventlog)
--    ghc-options:    -O2 -Wall -rtsopts -threaded -eventlog
--  else
--    ghc-options:    -O2 -Wall -rtsopts -threaded -auto-all -caf-all

--  build-depends:    base     >= 4.6,
--                    CoALP    >= 0.0.1,
--                    containers >= 0.5,
--                    deepseq  >= 1.3,
--                    time     >= 1.4,
--                    unordered-containers >= 0.2.3

--  default-extensions: BangPatterns


--test-suite CoALP-tests
--  type:             exitcode-stdio-1.0

--  hs-source-dirs:   tests

--  main-is:          Tests.hs

--  other-modules:    CoALP.Tests.Unit.Subst
--                    CoALP.Tests.Unit.Guards

--  default-language: Haskell2010

--  ghc-options:      -O2 -Wall -rtsopts -threaded

--  build-depends:    base        >= 4.6,
--                    CoALP       >= 0.0.1,
--                    containers  >= 0.5,
--                    directory,
--                    tasty       >= 0.3,
--                    tasty-hunit >= 0.2
