name:          CoALP
--             ,------- release
--             | ,----- pre-release
--             | | ,--- fixes and new functionality
--             | | |
version:       0.0.7
license:       LGPL-3
license-file:  LICENSE
author:        Ommited for reviewing

maintainer:    Ommited for reviewing
category:      CoALP
synopsis:      Coalgebraic logic programming library
description:   Library and command line interface implmenting CoALP
stability:     experimental
build-type:    Custom
cabal-version: >= 1.18
extra-source-files: examples/paper/*.logic
                    examples/guarded/*.logic
                    examples/unguarded/*.logic

flag release
  description: Release version flag
  default:     True

-- Event logs conflict with profiling. Hence a special flag to turn event logs
-- on and to turn profiling off.
flag eventlog
  description: Allows to generate event logs for ThreadScope.
  default:     False

library
  hs-source-dirs:   src 


  default-language: Haskell2010

  exposed-modules:  CoALP
                    CoALP.Error
                    CoALP.Program
                    CoALP.Parser.Lexer
                    CoALP.Parser.Parser
                    CoALP.Render
                    CoALP.RewTree
                    CoALP.DerTree
                    CoALP.Guards
                    CoALP.Sound
                    CoALP.Unify
                    CoALP.AntiUnify
                    CoALP.Transform
                    CoALP.Reductions
                    CoALP.Parser.PrettyPrint

  other-modules:    CoALP.FreshVar
                    


  if flag(eventlog)
    ghc-options:    -Wall -rtsopts -threaded -eventlog -fno-warn-tabs
  else
    ghc-options:    -Wall -rtsopts -auto-all -caf-all -fno-warn-tabs

  build-depends:    base                 >= 4.6 && < 5,
                    containers           >= 0.5,
                    mtl                  >= 2.2.1,
                    -- directory,
                    -- hashable,
                    -- deepseq,
                    -- text                 >= 1.2,
                    -- parsec               >= 3.1,
                    process              >= 1.0,
                    transformers         >= 0.3,
                    -- unordered-containers >= 0.2.3,
                    -- my dependencies
                    array                >= 0.5,
                    bifunctors           >= 3.0,
                    deepseq              >= 1.3,
                    semigroups           >= 0.16

  build-tools:      alex, happy

executable CoALPj
  hs-source-dirs:   inter
  main-is:          Main.hs
  other-modules:    CoALPj.CmdOpts
                    CoALPj.Actions
                    CoALPj.REPL
                    CoALPj.REPL.Commands
                    CoALPj.REPL.Parser
                    CoALPj.InternalState

  other-extensions: FlexibleInstances

  -- ghc-options:      -Wall -fwarn-incomplete-patterns 
  --ghc-options:      -fprof-auto -threaded -Wall -fwarn-incomplete-patterns 
  if flag(eventlog)
    ghc-options:    -Wall -rtsopts -threaded -eventlog -fno-warn-tabs
  else
    ghc-options:    -Wall -rtsopts -auto-all -caf-all -fno-warn-tabs



  default-language: Haskell2010

  build-depends:    base                 >= 4.7,
                    CoALP                >= 0.0.5,
                    transformers         >= 0.3,
                    optparse-applicative >= 0.11,
                    ansi-wl-pprint       >= 0.6.7,
                    mtl                  >= 2.2.1,
                    haskeline            >= 0.7.2,
                    parsec               >= 3.1.7,
                    containers           >= 0.5,
                    array                >= 0.5

--executable CoALP-benchmark-fibs
--  hs-source-dirs:   benchmarks

--  main-is:          Fibs.hs

--  default-language: Haskell2010

--  if flag(eventlog)
--    ghc-options:    -O2 -Wall -rtsopts -threaded -eventlog
--  else
--    ghc-options:    -O2 -Wall -rtsopts -threaded -auto-all -caf-all

--  build-depends:    base     >= 4.6,
--                    CoALP    >= 0.0.1,
--                    containers >= 0.5,
--                    deepseq  >= 1.3,
--                    time     >= 1.4,
--                    unordered-containers >= 0.2.3

--  default-extensions: BangPatterns


--executable CoALP-benchmark-automata
--  hs-source-dirs:   benchmarks

--  main-is:          Automata.hs

--  default-language: Haskell2010

--  if flag(eventlog)
--    ghc-options:    -O2 -Wall -rtsopts -threaded -eventlog
--  else
--    ghc-options:    -O2 -Wall -rtsopts -threaded -auto-all -caf-all

--  build-depends:    base     >= 4.6,
--                    CoALP    >= 0.0.1,
--                    containers >= 0.5,
--                    deepseq  >= 1.3,
--                    time     >= 1.4,
--                    unordered-containers >= 0.2.3

--  default-extensions: BangPatterns


test-suite CoALP-tests
  type:             exitcode-stdio-1.0

  hs-source-dirs:   tests

  main-is:          Tests.hs

  other-modules:    CoALP.Tests.Unit.Unify
                    CoALP.Tests.Unit.Transform
                    CoALP.Tests.Unit.AntiUnify
--                    CoALP.Tests.Unit.Guards

  default-language: Haskell2010

  ghc-options:      -O2 -Wall -rtsopts -threaded

  build-depends:    base        >= 4.6,
                    CoALP       >= 0.0.5,
--                    containers  >= 0.5,
--                    directory   ,
                    filepath    >= 1.3,
                    tasty       >= 0.10,
                    tasty-hunit >= 0.9,
                    tasty-golden >= 2.3
